[gd_scene load_steps=2 format=3 uid="uid://bgcmeahvdrgcg"]

[ext_resource type="Script" uid="uid://glpr25c7d5yd" path="res://scripts/main_menu.gd" id="1_yqorp"]

[node name="CanvasLayer" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yqorp")

[node name="MainMenu" type="CanvasLayer" parent="."]
visible = false

[node name="PlayButton" type="Button" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -63.0
offset_right = 36.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "PLAY"

[node name="CreditsButton" type="Button" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -3.0
offset_right = 52.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "CREDITS
"

[node name="Credits" type="CanvasLayer" parent="."]
visible = false

[node name="GoBackButton" type="Button" parent="Credits"]
offset_left = 6.0
offset_top = 6.0
offset_right = 79.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 24
text = "BACK"

[node name="Label" type="Label" parent="Credits"]
offset_left = 137.0
offset_top = 22.0
offset_right = 233.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 24
text = "Credits"
uppercase = true

[node name="Label2" type="Label" parent="Credits"]
offset_left = 8.0
offset_top = 67.0
offset_right = 377.0
offset_bottom = 239.0
theme_override_font_sizes/font_size = 12
text = "Jake6724 – Programmer
DanTheManNW – Menus Programmer
Torspou - Artist
Uvula_ - Game Design
Emiliomedrano - Composer
"
uppercase = true

[connection signal="pressed" from="MainMenu/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Credits/GoBackButton" to="." method="_on_go_back_button_pressed"]
